Změna barev a upravování na light mode a dark mode

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,10 +1,11 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Trending Films</ion-title>
+    <ion-title>Films</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+
   @if (isLoading) {
 <ion-list class="ion-padding-top">
   @for (i of dummyArray; track i) {
