--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -61,7 +61,7 @@ ion-header {
     ion-title {
       font-size: 1.5rem;
       font-weight: 600;
-      color: var(--text-primary);
+      color: #0077ff;
     }
   }
 }
